--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8" />
     <title>Loja</title>
 </head>
 <body>
@@ -8,6 +9,8 @@
     <h1>StreetVibe</h1>
     <p>Streetwear com alma e personalidade.</p>
     <img src="html.jpg" alt="Logo do HTML">
+    <link rel="stylesheet" href="css/style.css" />
 
 </body>
+    <h1>Título Centralizado</h1>
 </html>
