--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8" />
-    <title>Loja</title>
+  <meta charset="UTF-8" />
+  <title>StreetVibe</title>
+  <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-
+  <header>
     <h1>StreetVibe</h1>
-    <p>Streetwear com alma e personalidade.</p>
-    <img src="html.jpg" alt="Logo do HTML">
-    <link rel="stylesheet" href="css/style.css" />
-
+    <img src="html.jpg" alt="Logo da StreetVibe" class="logo" />
+    <p class="description">Streetwear com alma e personalidade.</p>
+  </header>
 </body>
-    <h1>Título Centralizado</h1>
 </html>
+
