--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
   <header>
+    <div class = "top-bar">
+
+      <button id="menu-btn" class="menu-btn" aria-label="Abrir Menu">
+      </button>
+
+      <div class="icon-right">
+        <button class="icon-btn aria-label="Pesquisar">
     <h1>StreetVibe</h1>
     <img src="html.jpg" alt="Logo da StreetVibe" class="logo" />
     <p class="description">Streetwear com alma e personalidade.</p>
