--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
-<head>
-  <meta charset="UTF-8" />
-  <title>StreetVibe</title>
-  <link rel="stylesheet" href="css/style.css" />
+<!--
+Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
+Click nbfs://nbhost/SystemFileSystem/Templates/Other/html.html to edit this template
+-->
+<html>
+    <head>
+        <link rel="stylesheet" href="css/style.css" />
+        <meta charset="UTF-8" />
+        <title>StreettVibe</title>
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
   <header>
-    <div class = "top-bar">
-
-      <button id="menu-btn" class="menu-btn" aria-label="Abrir Menu">
-      </button>
-
-      <div class="icon-right">
-        <button class="icon-btn aria-label="Pesquisar">
+    
     <h1>StreetVibe</h1>
-    <img src="html.jpg" alt="Logo da StreetVibe" class="logo" />
-    <p class="description">Streetwear com alma e personalidade.</p>
-  </header>
+    <img src="./img/image.jpg" alt="Foto"/>
+   </header>
 </body>
 </html>
-
